--- a/rat.html
+++ b/rat.html
@@ -121,7 +121,7 @@
         </div>
     </nav>
 
-    <section class="hero">
+    <section class="">
         <div class="free-trial-badge">
             Best RAT Tools, Please run only on VM machine
             <i class="fas  ms-2"></i>
